# embed_mqtt

./: CGI_web.c  CMakeLists.txt  README.md  mqttPublish.c  mqttSubscribe.c
